--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -3,4 +3,12 @@
 xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:id="@+id/text_id"
+        android:text="Running accelerometer app"
+        android:layout_centerVertical="true">
+
+    </TextView>
 </LinearLayout>
