--- a/mobile/src/main/res/layout/activity_main.xml
+++ b/mobile/src/main/res/layout/activity_main.xml
@@ -1,65 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingLeft="16dp"
-    android:paddingRight="16dp">
+    android:paddingRight="16dp"
+    android:weightSum="4">
 
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingTop="16dp"
+        android:weightSum="2">
+
+        <EditText
+            android:id="@+id/ID"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="@string/text_hint"
+            android:inputType="text" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/button_save"
+            android:textSize="20sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="16dp"
+        android:paddingTop="16dp"
+        android:weightSum="3">
 
     <TextView
         android:id="@+id/currentX"
+
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_weight="1"
         android:text="0.0"
-        android:textSize="60sp" />
+        android:textSize="40sp" />
 
 
     <TextView
         android:id="@+id/currentY"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_weight="1"
         android:text="0.0"
-        android:textSize="60sp" />
+        android:textSize="40sp" />
 
 
     <TextView
         android:id="@+id/currentZ"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_weight="1"
         android:text="0.0"
-        android:textSize="60sp" />
+        android:textSize="40sp" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:orientation="horizontal"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:weightSum="2">
 
         <Button
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:layout_weight="2"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
             android:onClick="onStartClick"
-        android:text="@string/button_start"
+            android:text="@string/button_start"
+
             android:textSize="40sp" />
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:layout_weight="2"
-        android:onClick="onStopClick"
-        android:text="Stop"
-        android:textSize="40sp" />
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:onClick="onStopClick"
+            android:text="@string/button_stop"
+            android:textSize="40sp" />
     </LinearLayout>
 </LinearLayout>
